--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,42 @@ install_manifest.txt
 compile_commands.json
 CTestTestfile.cmake
 _deps
+.vscode/c_cpp_properties.json
+.vscode/settings.json
+build/CPackConfig.cmake
+build/CPackSourceConfig.cmake
+build/DartConfiguration.tcl
+build/elevador
+build/.cmake/api/v1/query/client-vscode/query.json
+build/.cmake/api/v1/reply/cache-v2-ceb5b9211281e39b5441.json
+build/.cmake/api/v1/reply/codemodel-v2-581f9aca9d805c75cd8b.json
+build/.cmake/api/v1/reply/index-2022-03-03T03-30-24-0670.json
+build/.cmake/api/v1/reply/target-Continuous-Debug-ccb7ffa9978a17909427.json
+build/.cmake/api/v1/reply/target-ContinuousBuild-Debug-fbe5c6f13f9d0b0fda7f.json
+build/.cmake/api/v1/reply/target-ContinuousConfigure-Debug-e50d85f92dff45137d08.json
+build/.cmake/api/v1/reply/target-ContinuousCoverage-Debug-8e77c9844717b5d78f1d.json
+build/.cmake/api/v1/reply/target-ContinuousMemCheck-Debug-6dc397776ac62b583443.json
+build/.cmake/api/v1/reply/target-ContinuousStart-Debug-e5333a93d322bdca7e2c.json
+build/.cmake/api/v1/reply/target-ContinuousSubmit-Debug-4fa6b21fb7b292361882.json
+build/.cmake/api/v1/reply/target-ContinuousTest-Debug-568a9c9a705921553383.json
+build/.cmake/api/v1/reply/target-ContinuousUpdate-Debug-64371bec26c652a83b2a.json
+build/.cmake/api/v1/reply/target-elevador-Debug-b778b7f083cba221b688.json
+build/.cmake/api/v1/reply/target-Experimental-Debug-9dd5df03d773a90f3c92.json
+build/.cmake/api/v1/reply/target-ExperimentalBuild-Debug-73bb360ec85e77324b07.json
+build/.cmake/api/v1/reply/target-ExperimentalConfigure-Debug-16d715fabac2df4f738b.json
+build/.cmake/api/v1/reply/target-ExperimentalCoverage-Debug-84b4a72b86a74a7b0c74.json
+build/.cmake/api/v1/reply/target-ExperimentalMemCheck-Debug-e2a5c5b061800616824e.json
+build/.cmake/api/v1/reply/target-ExperimentalStart-Debug-7113052b00f034005848.json
+build/.cmake/api/v1/reply/target-ExperimentalSubmit-Debug-5845b4f637743a5446be.json
+build/.cmake/api/v1/reply/target-ExperimentalTest-Debug-46e37abeefe8d5146a50.json
+build/.cmake/api/v1/reply/target-ExperimentalUpdate-Debug-88df2b117e6a7cd48b33.json
+build/.cmake/api/v1/reply/target-Nightly-Debug-cea50abb2f464ca0229a.json
+build/.cmake/api/v1/reply/target-NightlyBuild-Debug-afccd0465e4b8c1e2d87.json
+build/.cmake/api/v1/reply/target-NightlyConfigure-Debug-7ec533b122c4c2965696.json
+build/.cmake/api/v1/reply/target-NightlyCoverage-Debug-e2b20065ab4aa5f75d86.json
+build/.cmake/api/v1/reply/target-NightlyMemCheck-Debug-8eda9eba68978ec4ed5b.json
+build/.cmake/api/v1/reply/target-NightlyMemoryCheck-Debug-784f4a2876bbb9b4bcea.json
+build/.cmake/api/v1/reply/target-NightlyStart-Debug-87062bf9eaacc239a2bf.json
+build/.cmake/api/v1/reply/target-NightlySubmit-Debug-00614dd8d283eaa542b9.json
+build/.cmake/api/v1/reply/target-NightlyTest-Debug-b8d330abdb63439bfe9e.json
+build/.cmake/api/v1/reply/target-NightlyUpdate-Debug-b681408b94dc782d2255.json
