--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,7 @@ include_directories(${CMAKE_CURRENT_LIST_DIR}/lib)
 
 add_executable(elevador main.cpp
   src/cabine.cpp
+  src/elevador.cpp
 )
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
