--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,6 +13,7 @@ enable_testing()
 add_executable(
     componentes-test 
     componentes_test.cpp
+    ../src/andar.cpp
 )
 
 target_link_libraries(
@@ -24,17 +25,23 @@ add_executable(
     cabine-test
     cabine_test.cpp
     ../src/cabine.cpp
+    ../src/andar.cpp
 )
 
 add_executable(
     elevador-test
     elevador_test.cpp
     ../src/elevador.cpp
+    ../src/cabine.cpp
+    ../src/andar.cpp
 )
 
 add_executable(
   restricoes-test
   restricoes_test.cpp
+  ../src/elevador.cpp
+  ../src/cabine.cpp
+  ../src/andar.cpp
 )
 
 target_link_libraries(
@@ -49,6 +56,7 @@ target_link_libraries(
 
 target_link_libraries(
   restricoes-test
+  gtest_main
 )
 include(GoogleTest)
 
